closer, we now get correct results from tick
